Fail pull_from_remote when would-be-merged changes conflict with the publish queue